--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,15 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path Alias */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@css/*": ["./src/css/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
