--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-react-x": "^2.5.1",
     "globals": "^16.5.0",
+    "parcel": "^2.16.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
