--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,7 @@
       "@components/*": ["./src/components/*"],
       "@assets/*": ["./src/assets/*"],
       "@css/*": ["./src/css/*"],
+      "@section/*": ["./src/section/*"],
       "@node-props": ["src/interface/node-props.tsx"],
       "@attr-props": ["src/interface/attr-props.tsx"]
     },
